--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
     "docx": "^9.5.3",
-    "mammoth": "^1.8.0",
-    "pdfjs-dist": "^4.9.155",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "i18next": "^25.8.11",
@@ -20,7 +20,9 @@
     "jspdf": "^2.5.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.8.0",
     "papaparse": "^5.4.1",
+    "pdfjs-dist": "^4.9.155",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.5.4",
@@ -28,11 +30,15 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "jsdom": "^28.1.0",
     "typescript": "^5.5.3",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vitest": "^4.0.18"
   }
 }
