--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "html2canvas": "^1.4.1",
     "i18next": "^25.8.11",
     "i18next-browser-languagedetector": "^8.2.1",
-    "jspdf": "^2.5.2",
+    "jspdf": "^4.2.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.8.0",
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.5.4",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.7"
   },
@@ -38,7 +39,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "jsdom": "^28.1.0",
     "typescript": "^5.5.3",
-    "vite": "^5.4.2",
+    "vite": "^7.3.1",
     "vitest": "^4.0.18"
   }
 }
