--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
   "dependencies": {
     "@types/file-saver": "^2.0.7",
     "docx": "^9.5.3",
+    "docx-preview": "^0.3.7",
     "file-saver": "^2.0.5",
-    "html2canvas": "^1.4.1",
     "i18next": "^25.8.11",
     "i18next-browser-languagedetector": "^8.2.1",
-    "jspdf": "^4.2.0",
-    "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "mammoth": "^1.8.0",
     "papaparse": "^5.4.1",
